added UpdateMethod refactor service